--- a/UiT.Blazor.Ordsky/Pages/Shared/NyttSammensattOrd.razor
+++ b/UiT.Blazor.Ordsky/Pages/Shared/NyttSammensattOrd.razor
@@ -24,7 +24,7 @@
     protected override void OnInitialized()
     {
         newWord = new Components.Model.ListWord();
-        newWord.Word = "Flere sammensatte ord";
+        newWord.Word = "";
         newWord.Wordtype = Components.Model.WordType.Combined;
 
         base.OnInitialized();
