--- a/UiT.Blazor.Ordsky/Pages/Tekst.razor
+++ b/UiT.Blazor.Ordsky/Pages/Tekst.razor
@@ -4,7 +4,13 @@
 
 @if(IsProcessing)
 {
-    <Fold />
+    <center>
+        <div style="ma-4 pa-4">
+            <MudText Typo="Typo.h2" Class="ma-4">Vent mens teksten lastes inn</MudText>
+            <br/>
+            <Fold Size="50px" />
+        </div>
+    </center>
 }
 else
 {
